--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         tools:ignore="GoogleAppIndexingWarning">
 
         <activity
-            android:name="com.frc1678.pit_collection.ModeCollectionSelectActivity"
+            android:name="com.frc1678.pit_collection.TeamListActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,9 +26,9 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name="com.frc1678.pit_collection.TeamListActivity"
-            android:screenOrientation="portrait" />
+<!--        <activity-->
+<!--            android:name="com.frc1678.pit_collection.TeamListActivity"-->
+<!--            android:screenOrientation="portrait" />-->
 
         <activity
             android:name="com.frc1678.pit_collection.CollectionObjectiveDataActivity"
