--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,9 @@ dependencies {
     def camerax_version = '1.0.0-alpha06'
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
+
+    implementation "io.ktor:ktor-client-core:2.2.2"
+    implementation "io.ktor:ktor-client-cio:2.2.2"
+    implementation "io.ktor:ktor-serialization-kotlinx-json:2.2.2"
+    implementation "io.ktor:ktor-client-content-negotiation:2.2.2"
 }
