--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     implementation "androidx.camera:camera-camera2:${camerax_version}"
 
     implementation "io.ktor:ktor-client-core:2.2.2"
-    implementation "io.ktor:ktor-client-cio:2.2.2"
+    implementation "io.ktor:ktor-client-okhttp:2.2.2"
     implementation "io.ktor:ktor-serialization-kotlinx-json:2.2.2"
     implementation "io.ktor:ktor-client-content-negotiation:2.2.2"
 }
